--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="shortcut icon" type="image/ico" href="/img/favicon.ico"/>
 
 	<!-- Hoja de estilos -->
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
