Creado CRUD con primera función de registro

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 		<br/>
 		<br/>
 
-		<!-- Insertar imagen con tamaño y al centro -->
 		<img src="img\unicaribelogo.jpg", class= 'galeria2' />  
 		
 		<h2>Integrantes</h2> 
+		
 		<p class="informacion">  
 			Moises Emiliano Arellano Ávila
 			<br/>
@@ -45,9 +45,18 @@
 			<br/>
 			Jacob Elías Torres
 		</p>
+
 		<br/>	
 	</div>
 
-	<div id ="franja"></div>
+	<br/>
+	<br/>
+
+	<footer>
+		<div id="franja">
+			<p>MySpaceIn © - 2018.</p>
+		</div>
+	</footer>
+
 </body>
 </html>
