--- a/login.html
+++ b/login.html
@@ -38,14 +38,20 @@
 		</h2>
 
 		<div class="contenedor-inputs">
-			<input type="text" id="usuario" name="usuario" placeholder="usuario" class="input-100">
-			<input type="password" id="password" name="password" placeholder="password" class="input-100">
+			<input type="text" id="usuario" name="usuario" placeholder="Usuario" class="input-100">
+			<input type="password" id="password" name="password" placeholder="Contraseña" class="input-100">
 			<input type="submit" value="Acceder" class="btn-enviar">
 		</div>
 	</form>
 
+	<br/>
+	<br/>
+
 	<footer>
-		<p>Texto de footer</p>
+		<div id="franja">
+			<p>MySpaceIn © - 2018.</p>
+		</div>
 	</footer>
+
 </body>
 </html>
