--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<ul>
 				<a href="index.html"> Index </a>
 				<a href="login.html"> Log In </a>
-				<a href="registro.html"> Register </a>
+				<a href="registro.php"> Register </a>
 			</ul>
 		</div>
 	</header>
