Corregido problema de incompatibilidad de versiones.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div id="menu">
 			<ul>
 				<a href="index.html"> Index </a>
-				<a href="login.html"> Log In </a>
+				<a href="login.php"> Log In </a>
 				<a href="registro.php"> Register </a>
 			</ul>
 		</div>
@@ -54,7 +54,7 @@
 
 	<footer>
 		<div id="franja">
-			<p>MySpaceIn © - 2018.</p>
+			<p id="textoFooter">MySpaceIn © - 2018.</p>
 		</div>
 	</footer>
 
